BusOne/src/objects/EM_Event_Session_Attendee_vod__c.object
<CustomObject>
    <description>Attendees of sessions at events for Veeva Event Management.</description>
    <fields>
        <fullName>Attendee_Name_vod__c</fullName>
        <description>Name of the event attendee</description>
        <formula>Attendee_vod__r.Attendee_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event attendee that attended the session.</description>
        <label>Attendee</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Event Session Attendees</relationshipLabel>
        <relationshipName>Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Session_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event session for which the attendee was present.</description>
        <label>Event Session</label>
        <referenceTo>EM_Event_Session_vod__c</referenceTo>
        <relationshipLabel>Event Session Attendees</relationshipLabel>
        <relationshipName>Event_Session_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Speaker at an event session</description>
        <label>Speaker</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Event Session Attendees</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team member present at an event session.</description>
        <label>Team Member</label>
        <referenceTo>EM_Event_Team_Member_vod__c</referenceTo>
        <relationshipLabel>Event Session Attendees</relationshipLabel>
        <relationshipName>Session_Attendee_Team_Members_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Session Attendee</label>
    <nameField>
        <displayFormat>ESA-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Session Attendees</pluralLabel>
    <recordTypes>
        <fullName>Event_Session_Attendee_vod</fullName>
        <active>true</active>
        <description>Event Session Attendee</description>
        <label>Event_Session_Attendee_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>